Closed Bug 1879991 Opened 2 years ago Closed 2 years ago

Mistake in ProcessArguments Comment

Categories

(DevTools :: Console, defect)

Firefox 124
defect

Tracking

(firefox124 fixed)

RESOLVED FIXED
124 Branch
Tracking Status
firefox124 --- fixed

People

(Reporter: rf, Assigned: rf)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:123.0) Gecko/20100101 Firefox/123.0

Expected results:

At https://searchfox.org/mozilla-central/source/dom/console/Console.cpp#1790, the comment says "string: %s, integer: %d, object: %o, double: %d", 's', 1, window, 0.9, using %d for double formatting although it is for integers, %f should be used instead.

Assignee: nobody → rf
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Pushed by nchevobbe@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ab0adb177836 Update Example in Comment on ProcessArguments. r=devtools-reviewers,nchevobbe DONTBUILD
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 124 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: