Bug 1879991 - Update Example in Comment on ProcessArguments. r=devtools-reviewers,nchevobbe DONTBUILD

Differential Revision: https://phabricator.services.mozilla.com/D201663